--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ ollama
 requests
 faiss-cpu
 sentence-transformers
-tensorflow==2.17.1
+tensorflow==2.19
+keras==3.9
+tf-keras
 reportlab
-transformers>=4.27.0
-
